<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center"
    android:background="@drawable/clearbackground"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="40dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4px"
        android:text="@string/alreadyauser"
        android:textSize="14sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/loginBtt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:gravity="left"
        android:paddingTop="4dp"
        android:text="@string/login"
        style="@style/TextFieldsForms"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/firsttime"
        android:textSize="14sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/signupBtt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left"
        android:paddingTop="4dp"
        android:text="@string/signup"
        style="@style/TextFieldsForms"
        android:textSize="20sp"
        android:textStyle="italic" />

</LinearLayout>