<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center"
    android:background="@drawable/clearbackground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical" />
    </LinearLayout>
    
    
    <ScrollView
        android:id="@+id/scrollSignup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="40dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/username"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/TextFieldsForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/userhint"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/email"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/TextFieldsForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/emailhint"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/TextFieldsForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/pwdhint"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/phone"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/editTextPhone"
                style="@style/TextFieldsForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/phonehint"
                android:inputType="phone"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/RelativeLayoutSignupBtt"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/signupBtt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@drawable/orangebtt"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/signup"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>