<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/clearbackground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="visible" >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:id="@+id/editProfileLayout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rounded" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_noimage_user" />
        </FrameLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4px"
                    android:text="@string/name"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/TextFieldsForms"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/namehint"
                    android:text="vrunoa"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4px"
                    android:text="@string/email"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/TextFieldsForms"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/userhint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4px"
                    android:text="@string/phone"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/editTextPhone"
                    style="@style/TextFieldsForms"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/phonehint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4px"
                    android:text="@string/profession"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spinnerProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4px"
                    android:text="@string/company"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/editTextCompany"
                    style="@style/TextFieldsForms"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/companyhint"
                    android:text=""
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/saveProfileBtt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/yellowbtt"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/save" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>